--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
 
 [project]
 name = "breathing-earth-system-simulator"
-version = "1.1.3"
+version = "1.2.0"
 description = "Breathing Earth System Simulator (BESS) Gross Primary Production (GPP) and Evapotranspiration (ET) Model Python"
 readme = "README.md"
 authors = [
@@ -15,8 +15,9 @@ classifiers = [
 ]
 dependencies = [
     "FLiESANN",
-    "gedi-canopy-height",
+    "gedi-canopy-height>=1.1.0",
     "geos5fp",
+    "koppengeiger>=1.0.4",
     "modisci",
     "numpy",
     "rasters"
