--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
 
 [project]
 name = "breathing-earth-system-simulator"
-version = "1.4.7"
+version = "1.4.8"
 description = "Breathing Earth System Simulator (BESS) Gross Primary Production (GPP) and Evapotranspiration (ET) Model Python"
 readme = "README.md"
 authors = [
@@ -18,7 +18,7 @@ dependencies = [
     "gedi-canopy-height>=1.1.0",
     "GEOS5FP>=1.1.1",
     "koppengeiger>=1.0.4",
-    "modisci",
+    "MODISCI>=1.3.0",
     "numpy",
     "rasters"
 ]
